kubernetes/apps/base/media/downloads/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: gluetun-api
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: data
              mountPath: /data

      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: data
          persistentVolumeClaim:
            claimName: media
